-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 260803) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][-extraT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO)
  Z = revision       - small changes to major.minor version (optional)

  extraT             - beta, pre and rc releases that are in preparation
		       of major releases (optional)

-----------------------------------------------------------------------

??0?2003 (v2.2.4)  -** stable release **-
	- edi-entries: edi-4, edi-19 and edi-35 frozen, edi-38 added 
		       and frozen immediately, edi-39 added; frozen is 
		       a new status for items that probably won't be
		       ever implemented
	- note: verified to compile ok with gcc-3.3
	- note: verified to work with python-2.3
	- added: eaim - command 'engine-launch' to inialize engine
		 without starting actual processing, and 'engine-halt'
		 for halting it without disconnecting; useful with
		 JACK transport functions
	- added: separate AUTHORS file; also added to the website
	- added: -d, -dd and -d command-line options, see ecasound(1)
	- added: recording offset parameter -z:multitrack,offset option
	- changed: to avoid resampling faults, upper limit of 2000%
		   set for pitchshifter's (-ei) shift-% arg; note! high
		   values of shift-% can still cause crashes if using 
		   libsamplerate
	- changed: if available, use pthread API for setting scheduler 
		   params; might improve real-time reliability on 
		   rh9.0 machines and others that have NPTL
	- changed: pyecasound - redefined configure option 
		   --enable-pyecasound=IMPL where 'IMPL' is either
		   'c' or 'python'; --disable-pyecasound disables 
		   them both
	- changed: pyecasound - if ecasound's build prefix does not