@@ -218,7 +218,7 @@ specified, the first non-option (doesn't start with '-') command
 line argument is considered to be an input.
 <p><p></p><dt><strong>-o[:]output-file-or-device</strong><dd>
 Works in the same way as the -i option. If no outputs are specified,
-the default output device is used (see &amp;tilde;/.ecasoundrc). Note! 
+the default output device is used (see ~/.ecasoundrc). Note! 
 you can't output to module formats supported by MikMod (this should
 be obvious).
 <p><em>OBJECT TYPE SPECIFIC NOTES</em>
