@@ -1,3 +1,7 @@
+2003-08-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
+
+        * library interface version 6 frozen
+
 2003-05-29  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
 	* kvu_rtcaps.cpp (kvu_set_thread_scheduling): added
@@ -10,7 +14,7 @@
 
 2003-01-07  Kai Vehmanen <kai.vehmanen@wakkanet.fi>
 
-	* library version 4:0:0 frozen
+	* library interface version 4 frozen
 
 2002-11-05  Kai Vehmanen  <kai.vehmanen@wakkanet.fi>
 
@@ -102,7 +106,7 @@
 	
 2001-04-27  Kai Vehmanen <kaiv@wakkanet.fi>
 
-	* library version 2:0:0 frozen
+	* library interface version 2 frozen
 	
 2001-04-23  Kai Vehmanen <kaiv@wakkanet.fi>	
 	
